--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "json-stringify": "^1.0.0",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
   },
