--- a/package.json
+++ b/package.json
@@ -39,5 +39,9 @@
     "style-loader": "^1.1.3",
     "webpack-dev-server": "^3.10.3",
     "workbox-webpack-plugin": "^5.1.1"
+  },
+  "engines": {
+    "node": ">=10.0.0",
+    "npm": ">=6.0.0"
   }
 }
