--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "json-stringify": "^1.0.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-plugin": "^1.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
@@ -37,6 +40,7 @@
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
+    "terser-webpack-plugin": "^2.3.5",
     "webpack-dev-server": "^3.10.3",
     "workbox-webpack-plugin": "^5.1.1"
   },
