--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "json-stringify": "^1.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "regenerator-runtime": "^0.13.5",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-plugin": "^1.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
+    "@babel/plugin-transform-runtime": "^7.9.0",
     "@babel/preset-env": "^7.8.7",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
